style.css
/*body styles
typography
buttons and links
header/nav
content by section
forms
footer
mobile

BRAND COLORS
#F2F4F4 - white
#424045 - smoky gray
#630716 - maroon
#f4e1d9 - rose pink
#708075 - eucalyptus green
#cc9e63 - blazerod gold (hehe if you get this reference)
*/

/*-----------------------------------------------
BODY
------------------------------------------------*/
body {
/*  margin: 2em;*/
background-color: #f4e1d9;
}
body,html{
  height:100%;
}
aside {
    background: #1f8dd6;
    padding: 0.3em 1em;
    border-radius: 3px;
    color: #fff;
    margin-bottom: 2em;
}
h1{
  font-family:'Sudestada',Cursive;
  color:#cc9e63;
}
h2 {
  font-family:'Sudestada',Cursive;
  color:#cc9e63;
  font-size: 6em;
}

h3 {
  font-family:'Radley','Times New Roman',serif;
  color:#630716;
  font-size:1.75em;
  text-transform: uppercase;
}
body, p{
  font-family:'Radley','Times New Roman',serif;
  color:#424045;
}
.primary-btn{
  text-transform: uppercase;
  background: #cc9e63;
  width: 100%;
  color: #fff;
  letter-spacing: 2px;
  font-size: 1.2em;
  text-shadow: 0 1px 2px rgba(99, 8, 23,0.5);
  transition: all 300ms;
}
.primary-btn:hover {
    box-shadow: -3px 4px 1px rgba(99, 8, 23,1);
    background: #cc9e63;
}
button:focus, button:active{
    outline: none;
}
/*-----------------------------------------------
Header/Navigation
------------------------------------------------*/
.nav{
  overflow:hidden;
  position:fixed;
  top:10px;
  width: 100%;
}

.nav-item {
  font-family: 'Radley', serif;
  text-transform: uppercase;
  padding:0px 20px;
}

/*.nav .nav-item{
  float:left;
  display:block;
  text-align:center;
}*/
.navbar-wrap.fixed-top{
  height: 120px;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}
.navbar-wrap.fixed-top .navbar{
  width: 90%;
  margin:0 auto;
  padding: 13px 0;
}
/*.navbar-light*/ .navbar-nav .nav-link{
    font-size: 1.1em;
    color: #fff;
    letter-spacing: 2px;
    transition: all 300ms
}
/*.navbar-light*/ .navbar-nav .nav-link:focus, /*.navbar-light*/ .navbar-nav .nav-link:hover{
    color: #fff;
}
/*.navbar-light*/ .navbar-nav .nav-link:hover::after{
  opacity:1;
}
/*.navbar-light*/ .navbar-nav .nav-link::after{
    content: '';
    height: 2px;
    width: 100%;
    background: #cc9e63;
    display: block;
    margin-top: 2px;
    opacity: 0;
    transition: all 300ms;
}
.nav-item:last-child {
    padding-right: 0;
}
a.navbar-brand {
    background-image: url('images/tseung-logo.svg');
    background-repeat: no-repeat;
    min-height: 70px;
    height: auto;
    width: 100px;
    max-width: 100%;
    transition: all 300ms;
}
.navbar-wrap.fixed-top.scroll {
    background: rgba(255,255,255,1);
    height: 80px;
    transition: all 300ms;
    -webkit-box-shadow: 0px 4px 15px 0px rgba(66,64,69,0.5);
-moz-box-shadow: 0px 4px 15px 0px rgba(66,64,69,0.5);
box-shadow: 0px 4px 15px 0px rgba(66,64,69,0.5);
}
.scroll /*.navbar-light*/ .navbar-nav .nav-link{
    color: #434146;
    font-size:1em;
}
.scroll a.navbar-brand {
    background-image: url('images/tseung-logo-gold.svg');
    min-height: 50px;
}
.navbar-dark .navbar-nav .nav-link {
    color: rgba(255,255,255,1);
}
/*-----------------------------------------------
Section 1 - Landing
------------------------------------------------*/
#section-one {
  height:100%;
}
#section-one .home-hero{
  background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/tseung-proposal-6.jpg");
  height:50%;

  background-position:top center;
  background-repeat:no-repeat;
  background-size:cover;
  position:relative;
  min-height:100%;
}

.hero-text{
  width: 100%;
  max-width: 750px;
  height: 50%;
  display: flex;
  flex-flow: row wrap;
  position: absolute;
  transform: translate(-50%, -50%);
  top: 53%;
  left: 50%;
}
.hero-text p {
  font-family:"Sudestada";
  line-height: 1;
  margin: 0;
  text-align: left;
  display:flex;
  justify-content: flex-start;
  width: 100%;
  transform: rotate(352deg);
  height: 180px;
  font-size: 13em;
  color: #fff;
}
.hero-text p:nth-child(2){
    justify-content: center;
}
.hero-text p:nth-child(3){
    justify-content: flex-end;
}
/*-----------------------------------------------
Section 2 - Info
------------------------------------------------*/
#section-two{
  padding: 10% 0;
/*  width: 90%;*/
  margin: 0 auto;
}

.section-two-image-wrap{
  width:auto;
}
.section-two-image-wrap img{
  max-width:100%;
  height:auto;

}
.section-two-image-wrap img {
    -webkit-box-shadow: -20px 22px 0px 0px rgba(99,7,22,1);
    -moz-box-shadow: -20px 22px 0px 0px rgba(99,7,22,1);
    box-shadow: -35px 37px 0px 0px rgba(99,7,22,1);
}

/*-----------------------------------------------
Section 3 - RSVP form
------------------------------------------------*/
textarea {
  width: 100%;
}
.content-head {
  font-weight: 400;
  /*text-transform: uppercase;*/
  letter-spacing: 0.1em;
  margin: 2em 0 1em;
}
.is-center {
  text-align: center;
}
/*.button-success {
  color: white;
  border-radius: 4px;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
  background: rgb(28, 184, 65); /* this is a green */
}*/
.button-xlarge {
  font-size: 125%;
}
#section-three label{
  text-transform:uppercase;
}
/*.honeypot-field {
  display: none;
}*/
#section-three .container{
    background: #fff;
    padding: 5% 10%;
}
.pure-group{
   display:flex;
   margin-bottom: 32px;
   align-items: flex-end;
}
.pure-form label{
    display:flex;
    align-items: flex-end;
    margin-right: 12px;
    margin-bottom: 0;
}
.pure-form fieldset {
    display: flex;
    width: 100%;
}
.pure-form .pure-group input:last-child, .pure-form .pure-group textarea:last-child{
    box-shadow: none;
    top: unset;
    border-radius: 0px;
    flex:1;
    border: none;
    border-bottom: 1px solid #424045;
    padding: 0;
    font-family: 'Radley', 'Helvetica', sans-serif;
    max-height: 31px;
}
input:focus {
    outline:none;
}
.pure-group.col-lg-4.col-sm-12 label {
    flex: 2;
}
#rsvp {
    flex: unset;
    width: 25%;
}
#section-three > div:first-of-type > .row {
    margin-bottom: 32px;
}
#section-three > div:first-of-type > .row h3{
    font-size: 1.25em;
}
.primary-btn.button-success{
    max-width: 160px;
    margin: 0 auto;
    border-radius: 1px;
    margin-top: 16px;
}
/*-----------------------------------------------
Footer
------------------------------------------------*/
.copywrite {
    background: #424045;
}
.copywrite-content{
    padding: 16px 0;
}
.copywrite p{
    margin:0;
    color:#fff;
    opacity: 0.5;
    text-transform: lowercase;
}
.copywrite p:nth-child(2){
  text-align:right;
}
/*-----------------------------------------------
Mobile
------------------------------------------------*/
@media only screen and (min-width: 1400px){
  .container{
    max-width: 1280px;
  }
  #section-three .container{
    max-width: 1140px;
    padding: 5% 6%;
  }
}
@media only screen and (max-width: 1400px){
  h2{
        font-size: 5em;
    }
    h3{
        font-size: 1.5em;
    }
     .pure-group.col-lg-4.col-sm-12 label {
        flex: unset;
        width: 100%;
    }
}
@media only screen and (max-width: 1200px){
    h2{
        font-size: 4em;
    }
    h3{
        font-size: 1.25em;
    }
    .hero-text p{
        font-size: 9em;
        height: 150px;
    }
    .hero-text{
        max-width: 600px;
    }
/*    .navbar-nav .nav-link{
        font-size: 0.8em;
    }*/
     label {
        font-size: 0.85em;
    }
}
@media only screen and (max-width: 990px){
  h2{
        font-size: 3em;
    }
  .hero-text{
    max-width: 500px;
  }
  .copywrite p:nth-child{
    text-align:center;
  }
   .pure-group.col-lg-4.col-sm-12 label {
        width: auto;
    }
    #rsvp {
        flex: 1;
        width:auto;
    }
    .navbar-wrap.fixed-top {
    width:auto;
    height: auto;
    width: 100%;
    display: block;
/*    padding: 0 40px;*/
  }
  .navbar-wrap.fixed-top .navbar{
        width: 100%;
    }
    .nav-logo-button-wrap {
        width: 100%;
        padding: 0 40px;
        position:relative;
    }
    /*.navbar-light */.navbar-toggler{
        transform: translate(-50%,-50%);
        top: 50%;
        right: 0;
        position: absolute;
    }
    .navbar-collapse ul{
        padding: 16px 32px 16px 32px;
        
    }
    .scroll .navbar-collapse ul{
        border-top: #dfdfdf solid 1px;
        background: #fff;
    }
}
@media only screen and (max-width: 768px){
  h2{
        font-size: 4.25em;
    }
    .container{
        padding: 0 40px;
    }
    .section-two-image-wrap img{
        -webkit-box-shadow: -12px 12px 0px 0px rgba(99,7,22,1);
        -moz-box-shadow: -12px 12px 0px 0px rgba(99,7,22,1);
        box-shadow: -12px 12px 0px 0px rgba(99,7,22,1);
    }
  #section-two .col-lg-5{
      order:2;
    }
    .pure-group{
        flex-wrap: wrap;
    }
    .pure-group.col-lg-4.col-sm-12 label, .pure-group label{
        width: 100%;
    }
    .pure-group.col-lg-4.col-sm-12 label br{
        display: none;
    }
}
@media only screen and (max-width: 600px){
  .hero-text p{
        font-size: 7em;
        position: absolute;
        transform: translate(-50%,-50%) rotate(352deg);
    }
    .hero-text > p:first-child{
        top: 0;
        left: 50%;
    }
    .hero-text > p:nth-child(2){
        top: 50%;
        left: 50%;
    }
    .hero-text > p:nth-child(3){
        top: 100%;
        left: 50%;
    }
    .hero-text{
        max-width: 400px;
        height: 250px;
        position:relative;
    }
    #section-three{
        padding: 0 32px;

    }
}
@media only screen and (max-width: 500px){
  h2{
      font-size: 3rem;
  } 
}

